Resolves T132 When LIBS_CAP is defined add it to the default LIBS; likewise for LDFLAGS, and CPPFLAGS for consistency.  Also fixed type in CPPFLAGS default list.

--- a/configure.ac
+++ b/configure.ac
@@ -578,9 +578,9 @@ AS_IF([test "$XAPIAN_CONFIG" != 'false'],[
 ])
 
 dnl Things we always need?
-SNERT_JOIN_UNIQ([LIBS],[$LIBS_ZLIB $LIBS_PGSQL $LIBS_MYSQL $LIBS_SQLITE3 $LIBS_UUID],[head])
-SNERT_JOIN_UNIQ([LDFLAGS],[$LDFLAGS_ZLIB $LDFLAGS_PGSQL $LDFLAGS_MYSQL $LDFLAGS_SQLITE3 $LDFLAGS_UUID])
-SNERT_JOIN_UNIQ([CPPFLAGS],[$CPPFLAGS_ZLIB $CPPFLAGS_PGSQL $CPPFLAGS_MYSQL $CPPFLAGS_SQLITE3 $LIBS_UUID])
+SNERT_JOIN_UNIQ([LIBS],[$LIBS_CAP $LIBS_ZLIB $LIBS_PGSQL $LIBS_MYSQL $LIBS_SQLITE3 $LIBS_UUID],[head])
+SNERT_JOIN_UNIQ([LDFLAGS],[$LDFLAGS_CAP $LDFLAGS_ZLIB $LDFLAGS_PGSQL $LDFLAGS_MYSQL $LDFLAGS_SQLITE3 $LDFLAGS_UUID])
+SNERT_JOIN_UNIQ([CPPFLAGS],[$CPPFLAGS_CAP $CPPFLAGS_ZLIB $CPPFLAGS_PGSQL $CPPFLAGS_MYSQL $CPPFLAGS_SQLITE3 $CPPFLAGS_UUID])
 
 AC_DEFINE_UNQUOTED(CYRUS_USER, "$enable_cyrus_user",[What user will we run as?])
 AC_DEFINE_UNQUOTED(CYRUS_GROUP, "$enable_cyrus_group",[What group will we run as?])
