T135 Still tweak CYRUS_GSSAPI to include -lkrb5 with some GSSAPI variants.

--- a/configure.ac
+++ b/configure.ac
@@ -599,7 +599,7 @@ AS_IF([test "$with_xapian" != 'no' -a "$XAPIAN_CONFIG" != 'false'],[
 ])
 
 dnl Things we always need?
-SNERT_JOIN_UNIQ([LIBS],[$LIBS_CAP $LIBS_ZLIB $LIBS_PGSQL $LIBS_MYSQL $LIBS_SQLITE3 $LIBS_UUID $LIBS_GSSAPI],[head])
+SNERT_JOIN_UNIQ([LIBS],[$LIBS_CAP $LIBS_ZLIB $LIBS_PGSQL $LIBS_MYSQL $LIBS_SQLITE3 $LIBS_UUID $LIBS_GSSAPI])
 SNERT_JOIN_UNIQ([LDFLAGS],[$LDFLAGS_CAP $LDFLAGS_ZLIB $LDFLAGS_PGSQL $LDFLAGS_MYSQL $LDFLAGS_SQLITE3 $LDFLAGS_UUID $LDFLAGS_GSSAPI])
 SNERT_JOIN_UNIQ([CPPFLAGS],[$CPPFLAGS_CAP $CPPFLAGS_ZLIB $CPPFLAGS_PGSQL $CPPFLAGS_MYSQL $CPPFLAGS_SQLITE3 $CPPFLAGS_UUID $CPPFLAGS_GSSAPI])
 
