Ensure that PCRE is part LIBS.

--- a/configure.ac
+++ b/configure.ac
@@ -599,9 +599,9 @@ AS_IF([test "$with_xapian" != 'no' -a "$XAPIAN_CONFIG" != 'false'],[
 ])
 
 dnl Things we always need?
-SNERT_JOIN_UNIQ([LIBS],[$LIBS_CAP $LIBS_ZLIB $LIBS_PGSQL $LIBS_MYSQL $LIBS_SQLITE3 $LIBS_UUID $LIBS_GSSAPI])
-SNERT_JOIN_UNIQ([LDFLAGS],[$LDFLAGS_CAP $LDFLAGS_ZLIB $LDFLAGS_PGSQL $LDFLAGS_MYSQL $LDFLAGS_SQLITE3 $LDFLAGS_UUID $LDFLAGS_GSSAPI])
-SNERT_JOIN_UNIQ([CPPFLAGS],[$CPPFLAGS_CAP $CPPFLAGS_ZLIB $CPPFLAGS_PGSQL $CPPFLAGS_MYSQL $CPPFLAGS_SQLITE3 $CPPFLAGS_UUID $CPPFLAGS_GSSAPI])
+SNERT_JOIN_UNIQ([LIBS],[$LIBS_PCRE $LIBS_CAP $LIBS_ZLIB $LIBS_PGSQL $LIBS_MYSQL $LIBS_SQLITE3 $LIBS_UUID $LIBS_GSSAPI])
+SNERT_JOIN_UNIQ([LDFLAGS],[$LDFLAGS_PCRE $LDFLAGS_CAP $LDFLAGS_ZLIB $LDFLAGS_PGSQL $LDFLAGS_MYSQL $LDFLAGS_SQLITE3 $LDFLAGS_UUID $LDFLAGS_GSSAPI])
+SNERT_JOIN_UNIQ([CPPFLAGS],[$CPPFLAGS_PCRE $CPPFLAGS_CAP $CPPFLAGS_ZLIB $CPPFLAGS_PGSQL $CPPFLAGS_MYSQL $CPPFLAGS_SQLITE3 $CPPFLAGS_UUID $CPPFLAGS_GSSAPI])
 
 AC_DEFINE_UNQUOTED(CYRUS_USER, "$enable_cyrus_user",[What user will we run as?])
 AC_DEFINE_UNQUOTED(CYRUS_GROUP, "$enable_cyrus_group",[What group will we run as?])
@@ -986,6 +986,7 @@ AC_MSG_RESULT([  OpenAFS.............: "$CPPFLAGS_AFS" "$LDFLAGS_AFS" "$LIBS_AFS
 AC_MSG_RESULT([  OpenDKIM............: "$CPPFLAGS_DKIM" "$LDFLAGS_DKIM" "$LIBS_DKIM"])
 AC_MSG_RESULT([  OpenLDAP............: "$CPPFLAGS_LDAP" "$LDFLAGS_LDAP" "$LIBS_LDAP"])
 AC_MSG_RESULT([  OpenSSL.............: "$CPPFLAGS_SSL" "$LDFLAGS_SSL" "$LIBS_SSL"])
+AC_MSG_RESULT([  PCRE................: "$CPPFLAGS_PCRE" "$LDFLAGS_PCRE" "$LIBS_PCRE"])
 AC_MSG_RESULT([  Perl................: "$with_perl"])
 AC_MSG_RESULT([  SASL2...............: "$CPPFLAGS_SASL2" "$LDFLAGS_SASL2" "$LIBS_SASL2"])
 AC_MSG_RESULT([  SQLite3.............: "$CPPFLAGS_SQLITE3" "$LDFLAGS_SQLITE3" "$LIBS_SQLITE3"])
