Revert "configure: Correct failing if OpenSSL development headers are not available"
This reverts commit 8e3a206a0b5f2de65d10591aea112ddb41d016a7.

--- a/configure.ac
+++ b/configure.ac
@@ -106,7 +106,7 @@ SNERT_OPTION_WITH_PGSQL
 CYRUS_OPTION_WITH_OPENAFS
 CYRUS_OPTION_WITH_OPENLDAP
 CYRUS_OPTION_WITH_OPENDKIM
-CYRUS_OPTION_WITH_OPENSSL
+SNERT_OPTION_WITH_OPENSSL
 
 AC_ARG_WITH([perl],[AS_HELP_STRING([--with-perl=PROG],[absolute program path for perl])],[
 	dnl Override detected system perl.
@@ -264,7 +264,7 @@ SNERT_PGSQL
 CYRUS_OPENAFS
 CYRUS_OPENDKIM
 CYRUS_OPENLDAP
-CYRUS_OPENSSL
+SNERT_OPENSSL
 CYRUS_PCRE
 SNERT_REGEX
 SNERT_SASL2
