Revert "Resolved T127 (again).  Made clear distinction between Kerberos 4 and 5."
This reverts commit 580a7052bf1a772f28d68e3996f96af4f4aee45f.

--- a/configure.ac
+++ b/configure.ac
@@ -101,8 +101,7 @@ CYRUS_OPTION_WITH_GSSAPI
 AC_ARG_WITH(ldap,[AS_HELP_STRING([--with-ldap=DIR],[LDAP support])],,[with_ldap='yes'])
 
 CYRUS_OPTION_WITH_JANSSON
-CYRUS_OPTION_WITH_KRB4	dnl for Zephyr?
-CYRUS_OPTION_WITH_KRB5
+CYRUS_OPTION_WITH_KERBEROS
 SNERT_OPTION_WITH_MYSQL
 SNERT_OPTION_WITH_PGSQL
 CYRUS_OPTION_WITH_OPENAFS
@@ -244,12 +243,11 @@ CYRUS_CAP
 CYRUS_CLAMAV
 CYRUS_COM_ERR
 CYRUS_CUNIT
+CYRUS_GSSAPI
 CYRUS_ICAL
 CYRUS_ICU
 CYRUS_JANSSON
-CYRUS_KRB4
-CYRUS_KRB5
-CYRUS_GSSAPI
+CYRUS_KERBEROS
 CYRUS_XML2
 SNERT_MYSQL
 SNERT_PGSQL
@@ -378,8 +376,9 @@ dnl AS_IF([test "$enable_sieve" != "no"],[
 dnl ])
 
 AS_IF([test "$enable_afs" != 'no' -a "$snert_find_file_afs_libkauth" != 'no'],[
-	AS_IF([test "$enable_krb5afspts" = "yes" -a "$ac_cv_func_krb5_init_context" = 'yes'], [
+	AS_IF([test "$enable_krb5afspts" = "yes"], [
 		AC_DEFINE(AFSPTS_USE_KRB5,[],[Should the AFS PTS plugin use krb5?])
+		AC_CHECK_LIB([krb5],[krb5_init_context])
 	])
 
 	dnl Does AFS need sigvec?  We have to link against lwp and see
@@ -573,15 +572,15 @@ AS_IF([test X"$enable_sphinx" = X'yes' -a -n "$LIBS_MYSQL"],[
 AS_IF([test X"$enable_squat" = X'yes'],[
 	AC_DEFINE(USE_SQUAT,[1],[Build in Squat support?])
 ])
-AS_IF([test "$with_xapian" != 'no' -a "$XAPIAN_CONFIG" != 'false'],[
+AS_IF([test "$with_xapian" != 'no' "$XAPIAN_CONFIG" != 'false'],[
 	XAPIAN_VERSION=`$XAPIAN_CONFIG --version | sed -e's/.* //'`
 	AC_DEFINE(USE_XAPIAN,[1],[Build in Xapian support?])
 ])
 
 dnl Things we always need?
-SNERT_JOIN_UNIQ([LIBS],[$LIBS_CAP $LIBS_ZLIB $LIBS_PGSQL $LIBS_MYSQL $LIBS_SQLITE3 $LIBS_UUID $LIBS_GSSAPI],[head])
-SNERT_JOIN_UNIQ([LDFLAGS],[$LDFLAGS_CAP $LDFLAGS_ZLIB $LDFLAGS_PGSQL $LDFLAGS_MYSQL $LDFLAGS_SQLITE3 $LDFLAGS_UUID $LDFLAGS_GSSAPI])
-SNERT_JOIN_UNIQ([CPPFLAGS],[$CPPFLAGS_CAP $CPPFLAGS_ZLIB $CPPFLAGS_PGSQL $CPPFLAGS_MYSQL $CPPFLAGS_SQLITE3 $CPPFLAGS_UUID $CPPFLAGS_GSSAPI])
+SNERT_JOIN_UNIQ([LIBS],[$LIBS_CAP $LIBS_ZLIB $LIBS_PGSQL $LIBS_MYSQL $LIBS_SQLITE3 $LIBS_UUID],[head])
+SNERT_JOIN_UNIQ([LDFLAGS],[$LDFLAGS_CAP $LDFLAGS_ZLIB $LDFLAGS_PGSQL $LDFLAGS_MYSQL $LDFLAGS_SQLITE3 $LDFLAGS_UUID])
+SNERT_JOIN_UNIQ([CPPFLAGS],[$CPPFLAGS_CAP $CPPFLAGS_ZLIB $CPPFLAGS_PGSQL $CPPFLAGS_MYSQL $CPPFLAGS_SQLITE3 $CPPFLAGS_UUID])
 
 AC_DEFINE_UNQUOTED(CYRUS_USER, "$enable_cyrus_user",[What user will we run as?])
 AC_DEFINE_UNQUOTED(CYRUS_GROUP, "$enable_cyrus_group",[What group will we run as?])
@@ -644,8 +643,6 @@ AC_SUBST(DKIM_CFLAGS, $CPPFLAGS_DKIM)
 AC_SUBST(DKIM_LDFLAGS, $LDFLAGS_DKIM)
 AC_SUBST(DKIM_LIBS, $LIBS_DKIM)
 
-AC_SUBST(GSSAPIBASE_LIBS, $LIBS_GSSAPI)
-
 AC_SUBST(ICU_CFLAGS, $CPPFLAGS_ICU)
 AC_SUBST(ICU_LDFLAGSS, $LDFLAGS_ICU)
 AC_SUBST(ICU_LIBS, $LIBS_ICU)
@@ -658,7 +655,7 @@ AC_SUBST([JANSSON_LIBS], $LIBS_JANSSON)
 AC_SUBST([JANSSON_LDFLAGS], $LDFLAGS_JANSSON)
 AC_SUBST([JANSSON_CFLAGS], $CPPFLAGS_JANSSON)
 
-AC_SUBST(HAVE_KRB, $LIBS_KRB4)
+AC_SUBST(HAVE_KRB, $LIBS_KRB)
 
 AC_SUBST(SASLFLAGS, $CPPFLAGS_SASL2)
 AC_SUBST(LIB_SASL, $LIBS_SASL2)
@@ -954,8 +951,7 @@ AC_MSG_RESULT([  com_err.............: "$CPPFLAGS_COM_ERR" "$LDFLAGS_COM_ERR" "$
 AC_MSG_RESULT([  CUnit...............: "$CPPFLAGS_CUNIT" "$LDFLAGS_CUNIT" "$LIBS_CUNIT"])
 AC_MSG_RESULT([  GSSAPI..............: "$CPPFLAGS_GSSAPI" "$LDFLAGS_GSSAPI" "$LIBS_GSSAPI"])
 AC_MSG_RESULT([  Jansson.............: "$CPPFLAGS_JANSSON" "$LDFLAGS_JANSSON" "$LIBS_JANSSON"])
-AC_MSG_RESULT([  Kerberos 4..........: "$CPPFLAGS_KRB4" "$LDFLAGS_KRB4" "$LIBS_KRB4"])
-AC_MSG_RESULT([  Kerberos 5..........: "$CPPFLAGS_KRB5" "$LDFLAGS_KRB5" "$LIBS_KRB5"])
+AC_MSG_RESULT([  Kerberos 4..........: "$CPPFLAGS_KRB" "$LDFLAGS_KRB" "$LIBS_KRB"])
 AC_MSG_RESULT([  libical.............: "$CPPFLAGS_ICAL" "$LDFLAGS_ICAL" "$LIBS_ICAL"])
 AC_MSG_RESULT([  libicu..............: "$CPPFLAGS_ICU" "$LDFLAGS_ICU" "$LIBS_ICU"])
 AC_MSG_RESULT([  libuuid.............: "$CPPFLAGS_UUID" "$LDFLAGS_UUID" "$LIBS_UUID"])
